# hammock

./: .gitignore  .gitmodules  .push.settings.jsonc  Cargo.toml  Cross.toml  PMBBUILD  README.md  bacon.toml  crossrun.sh  hammockd.c  meson.build
docs/: config.default.toml  config.default.yaml
docs/schema/: hdl.yaml  match-rule-names.yaml  match-rules.yaml
hammock/: hammock.c  hammock.h  meson.build
protocol/: meson.build  wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml
src/: app_track.rs  application.rs  args.rs  cgroups.rs  config.rs  dbus.rs  events.rs  hammock.rs  lib.rs  user.rs  wayland.rs  wayland_demo.rs.old
src/app_track/: gtk_shell.rs  hdbus.rs  mod.rs  wayland.rs
src/dbus/: hammock1.rs  mod.rs  server.rs  systemd1.rs
src/hal/: backlight.rs  mod.rs  wakeup.rs
src/match_rules/: foreground.rs  logic.rs  mod.rs
