[package]
name = "hammock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
calloop = "0.10.5"
cgroups-rs = "0.3.1"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
dbus = "0.9.7"
enum_dispatch = "0.3.11"
env_logger = "0.10.0"
ipc-channel = "0.16.0"
log = { version = "0.4.17", features = ["std", "serde"] }
nix = "0.26.2"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_tuple = "0.5.0"
serde_yaml = "0.9.17"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
wayland-client = { version = "0.30.0", features = ["calloop", "log"] }
wayland-protocols = { version = "0.30.0", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
wayland-protocols-misc = { version = "0.1.0", features = ["client"] }
zbus = "3.10.0"

[patch.crates-io]
cgroups-rs = { path = "vendor/cgroups-rs" }
wayland-client = { path = "vendor/wayland-rs/wayland-client" }
wayland-protocols = { path = "vendor/wayland-rs/wayland-protocols" }
wayland-protocols-wlr = { path = "vendor/wayland-rs/wayland-protocols-wlr" }
wayland-protocols-misc = { path = "vendor/wayland-rs/wayland-protocols-misc" }
